@@ -1,5 +1,6 @@
 Revision history for Web::ComposableRequest
 
+          - Split request_config_roles into add_ and list_ config roles
           - Enhanced L10N locale attribute builder
           - Better prereq data for build and test phases
 
